--- a/deploy.valerii-test.yml
+++ b/deploy.valerii-test.yml
@@ -39,7 +39,7 @@ tag: '1.0'
 
 environment: docker.dev
 image:
-    tag: spryker/php:8.1
+    tag: spryker/php:8.2-alpine3.18
     environment:
         SPRYKER_DEFAULT_STORE: "DE"
         SPRYKER_ACTIVE_STORES: "DE,AT"
@@ -49,12 +49,8 @@ image:
         SPRYKER_HOOK_DESTRUCTIVE_INSTALL: "vendor/bin/install -r destructive --no-ansi -vvv"
         AWS_REGION: 'eu-central-1'
     node:
-        version: 16
-        npm: 8
-    php:
-        enabled-extensions:
-            - blackfire
-            - newrelic
+        version: 18
+        npm: 9
 composer:
     mode: --no-dev
     autoload: --classmap-authoritative
@@ -73,7 +69,7 @@ regions:
             mail:
                 sender:
                     name: Spryker No-Reply
-                    email: no-reply@valerii-terraform.cloud.spryker.toys
+                    email: no-reply@valerii-test.cloud.spryker.toys
             database:
                 database: valerii_staging
                 username: spryker
@@ -107,55 +103,55 @@ groups:
             Redirects:
                 application: static
                 endpoints:
-                    valerii-terraform.cloud.spryker.toys:
+                    valerii-test.cloud.spryker.toys:
                         store: DE
                         redirect:
                             type: 302
-                            url: www.de.valerii-terraform.cloud.spryker.toys
-                    www.valerii-terraform.cloud.spryker.toys:
+                            url: www.de.valerii-test.cloud.spryker.toys
+                    www.valerii-test.cloud.spryker.toys:
                         store: DE
                         redirect:
                             type: 302
-                            url: www.de.valerii-terraform.cloud.spryker.toys
+                            url: www.de.valerii-test.cloud.spryker.toys
             Yves:
                 application: yves
                 endpoints:
-                    www.de.valerii-terraform.cloud.spryker.toys:
+                    www.de.valerii-test.cloud.spryker.toys:
                         store: DE
                         <<: *frontend-auth
-                    www.at.valerii-terraform.cloud.spryker.toys:
+                    www.at.valerii-test.cloud.spryker.toys:
                         store: AT
                         <<: *frontend-auth
             boffice:
                 application: backoffice
                 endpoints:
-                    backoffice.de.valerii-terraform.cloud.spryker.toys:
+                    backoffice.de.valerii-test.cloud.spryker.toys:
                         store: DE
                         primal: true
-                    backoffice.at.valerii-terraform.cloud.spryker.toys:
+                    backoffice.at.valerii-test.cloud.spryker.toys:
                         store: AT
             backgw:
                 application: backend-gateway
                 endpoints:
-                    backend-gateway.de.valerii-terraform.cloud.spryker.toys:
+                    backend-gateway.de.valerii-test.cloud.spryker.toys:
                         store: DE
-                    backend-gateway.at.valerii-terraform.cloud.spryker.toys:
+                    backend-gateway.at.valerii-test.cloud.spryker.toys:
                         store: AT
             backapi:
                 application: zed
                 endpoints:
-                    backend-api.de.valerii-terraform.cloud.spryker.toys:
+                    backend-api.de.valerii-test.cloud.spryker.toys:
                         store: DE
                         entry-point: BackendApi
-                    backend-api.at.valerii-terraform.cloud.spryker.toys:
+                    backend-api.at.valerii-test.cloud.spryker.toys:
                         store: AT
                         entry-point: BackendApi
             Glue:
                 application: glue
                 endpoints:
-                    glue.de.valerii-terraform.cloud.spryker.toys:
+                    glue.de.valerii-test.cloud.spryker.toys:
                         store: DE
-                    glue.at.valerii-terraform.cloud.spryker.toys:
+                    glue.at.valerii-test.cloud.spryker.toys:
                         store: AT
 services:
     database:
@@ -174,7 +170,7 @@ services:
             username: "spryker"
             password: "secret"
         endpoints:
-            queue.valerii-terraform.cloud.spryker.toys:
+            queue.valerii-test.cloud.spryker.toys:
             localhost:5672:
                 protocol: tcp
     session:
@@ -194,11 +190,11 @@ services:
         engine: jenkins
         version: '2.324'
         endpoints:
-            jenkins2.valerii-terraform.cloud.spryker.toys:
+            jenkins.valerii-test.cloud.spryker.toys:
     mail_catcher:
         engine: mailhog
         endpoints:
-            mail.valerii-terraform.cloud.spryker.toys:
+            mail.valerii-test.cloud.spryker.toys:
 docker:
     ssl:
         enabled: true
