CC-31486 C&C architecture refactoring before stabilization. (#8302)
CC-31486 C&C architecture refactoring before stabilization.

--- a/tsconfig.yves.json
+++ b/tsconfig.yves.json
@@ -3,6 +3,9 @@
     "compilerOptions": {
         "paths": {
             "*": ["*"],
+            "ServicePointWidget/*": [
+                "./vendor/spryker/spryker-shop/Bundles/ServicePointWidget/src/SprykerShop/Yves/ServicePointWidget/Theme/default/*"
+            ],
             "ShopUi/*": ["./vendor/spryker/spryker-shop/Bundles/ShopUi/src/SprykerShop/Yves/ShopUi/Theme/default/*"]
         }
     }
