--- a/deploy.valerii-test.yml
+++ b/deploy.valerii-test.yml
@@ -71,7 +71,7 @@ regions:
                     name: Spryker No-Reply
                     email: no-reply@valerii-test.cloud.spryker.toys
             database:
-                database: valerii_staging
+                database: valerii_test
                 username: spryker
                 password: secret
 
