--- a/data/import/common/minimal.yml
+++ b/data/import/common/minimal.yml
@@ -31,6 +31,10 @@ actions:
       source: data/import/common/common/shipment.csv
     - data_entity: payment-method
       source: data/import/common/common/payment_method.csv
+    - data_entity: payment-method-store
+      source: data/import/common/DE/payment_method_store.csv
+    - data_entity: payment-method-store
+      source: data/import/common/AT/payment_method_store.csv
     #2. Catalog Setup data import
     - data_entity: category-template
       source: data/import/common/common/category_template.csv
