FRW-6810 Fixed config file for DDE API (#8393)
FRW-6810 Fixed config file for DDE API

--- a/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
+++ b/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
@@ -1714,8 +1714,8 @@
                     "validation": { "isRequired": false }
                 },
                 {
-                    "fieldName": "is_actice",
-                    "fieldVisibleName": "is_actice",
+                    "fieldName": "is_active",
+                    "fieldVisibleName": "is_active",
                     "isCreatable": true,
                     "isEditable": true,
                     "type": "boolean",
@@ -2098,8 +2098,8 @@
                     "validation": { "isRequired": true }
                 },
                 {
-                    "fieldName": "fk_task_set",
-                    "fieldVisibleName": "fk_task_set",
+                    "fieldName": "fk_tax_set",
+                    "fieldVisibleName": "fk_tax_set",
                     "isCreatable": true,
                     "isEditable": true,
                     "type": "integer",
