CC-31952 Fixed service point related flickery tests. (#8453)
CC-31952 Fixed service point related flickery tests.

--- a/tests/PyzTest/Glue/Checkout/codeception.yml
+++ b/tests/PyzTest/Glue/Checkout/codeception.yml
@@ -48,6 +48,7 @@ suites:
                 - \SprykerTest\Shared\ProductOfferStock\Helper\ProductOfferStockDataHelper
                 - \SprykerTest\Shared\ProductOfferServicePoint\Helper\ProductOfferServiceHelper
                 - \SprykerTest\Shared\ProductOfferShipmentType\Helper\ProductOfferShipmentTypeHelper
+                - \SprykerTest\Zed\Merchant\Helper\MerchantHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
