--- a/composer.json
+++ b/composer.json
@@ -87,10 +87,10 @@
         "symfony/process": "^5.4.0 || ^6.0.0",
         "symfony/property-access": "^5.4.0 || ^6.0.0",
         "symfony/routing": "^5.1.0 || ^6.0.0",
-        "symfony/security-core": "^5.4.21",
-        "symfony/security-http": "^5.4.21",
+        "symfony/security-core": "^5.4.21 || ^6.0.0",
+        "symfony/security-http": "^5.4.21 || ^6.0.0",
         "symfony/security-csrf": "^5.3.0 || ^6.0.0",
-        "symfony/security-guard": "^5.4.21",
+        "symfony/security-guard": "^5.4.0",
         "symfony/serializer": "^5.0.9 || ^6.0.0",
         "symfony/stopwatch": "^5.0.9 || ^6.0.0",
         "symfony/translation": "^5.0.9 || ^6.0.0",
