FRW-7048 Fixed travis. (Excluded broken codeception version) (#8551)
FRW-7048 Excluded broken codeception version.

--- a/composer.json
+++ b/composer.json
@@ -255,5 +255,8 @@
         "prefer-mid": [
             "COMPOSER_MEMORY_LIMIT=-1 composer require twig/twig:\"^2.9.0\""
         ]
+    },
+    "conflict": {
+        "codeception/codeception": "5.0.13"
     }
 }
