FRW-7048 Fixed CI. (Excluded broken codeception version)

--- a/composer.json
+++ b/composer.json
@@ -1269,6 +1269,9 @@
             "symfony/flex": false
         }
     },
+    "conflict": {
+        "codeception/codeception": "5.0.13"
+    }
     "scripts": {
         "post-install-cmd": [
             "ChromedriverInstaller\\Installer::installChromedriver"
