--- a/tests/PyzTest/Glue/Checkout/codeception.yml
+++ b/tests/PyzTest/Glue/Checkout/codeception.yml
@@ -49,6 +49,10 @@ suites:
                 - \SprykerTest\Shared\ProductOfferServicePoint\Helper\ProductOfferServiceHelper
                 - \SprykerTest\Shared\ProductOfferShipmentType\Helper\ProductOfferShipmentTypeHelper
                 - \SprykerTest\Zed\Merchant\Helper\MerchantHelper
+                - \SprykerTest\Zed\CompanyUnitAddress\Helper\CompanyUnitAddressDataHelper
+                - \SprykerTest\Zed\CompanyBusinessUnit\Helper\CompanyBusinessUnitHelper
+                - \SprykerTest\Zed\Company\Helper\CompanyHelper
+                - \SprykerTest\Shared\CompanyUser\Helper\CompanyUserHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
