FRW-2289 Allow to configure date field type for `Archivable` and `Timestampable`  propel behaviors. (#8503)
FRW-2289 Allow to configure date field type for `Archivable` and `Timestampable`  propel behaviors.

--- a/composer.json
+++ b/composer.json
@@ -156,7 +156,8 @@
             "Generated\\": "src/Generated/",
             "Orm\\": "src/Orm/",
             "Pyz\\": "src/Pyz/",
-            "SprykerConfig\\": "src/SprykerConfig/"
+            "SprykerConfig\\": "src/SprykerConfig/",
+            "Propel\\": "vendor/spryker/spryker/Bundles/PropelOrm/src/Spryker/Zed/PropelOrm/Business/Polyfill/"
         },
         "psr-0": {
             "Pimple": "vendor/spryker/spryker/Bundles/Container/src/Spryker/"
