FRW-6958 updated composer.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Spryker Suite (internal)",
     "license": "MIT",
     "require": {
-        "spryker/spryker": "dev-master",
+        "spryker/spryker": "dev-feature/frw-6958/dev-migration-to-buddy-ci",
         "spryker/spryker-shop": "dev-master",
         "spryker/install": "dev-master",
         "spryker/rabbit-mq": "dev-master",
