--- a/deploy.valerii-test.yml
+++ b/deploy.valerii-test.yml
@@ -45,7 +45,7 @@ image:
         SPRYKER_DEFAULT_STORE: "DE"
         SPRYKER_ACTIVE_STORES: "DE,AT"
         SPRYKER_HOOK_BEFORE_DEPLOY: "vendor/bin/install -r pre-deploy -vvv"
-        SPRYKER_HOOK_AFTER_DEPLOY: "vendor/bin/install -r post-deploy -vvv"
+        SPRYKER_HOOK_AFTER_DEPLOY: "true"
         SPRYKER_HOOK_INSTALL: "vendor/bin/install -r production --no-ansi -vvv"
         SPRYKER_HOOK_DESTRUCTIVE_INSTALL: "vendor/bin/install -r destructive --no-ansi -vvv"
         AWS_REGION: 'eu-central-1'
