FRW-6958 Fixed TTY allocation issue.

--- a/.robot/docker-compose.robot.yml
+++ b/.robot/docker-compose.robot.yml
@@ -16,6 +16,6 @@ services:
         volumes:
             - ./vendor/spryker/robotframework-suite-tests:/opt/robotframework:rw
             - ./.robot/results:/opt/robotframework/results:rw
-        tty: true
+        tty: false
 networks:
     private:
