FRW-6958: Deploy ci

--- a/deploy.ci.acceptance.mariadb.yml
+++ b/deploy.ci.acceptance.mariadb.yml
@@ -174,7 +174,17 @@ docker:
         store: DE
 
     mount:
-        baked:
+        native:
+            platforms:
+                - linux
+
+        docker-sync:
+            platforms:
+                - windows
+
+        mutagen:
+            platforms:
+                - macos
 
     compose:
         yamls:
