FRW-6958 Enabled for all branches.

--- a/buddy.yml
+++ b/buddy.yml
@@ -1,7 +1,8 @@
 - pipeline: 'Standard Validation'
-  on: 'PUSH'
-  refs:
-      - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\/.+|^feature\\/[a-z]+-\\d+\\/(master|dev)-.+|^feature\\/[a-z]+-\\d+\\/[a-z]+-\\d+\\/(master|dev)-.+)"
+  events:
+      - type: 'PUSH'
+        refs:
+            - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\\\/.+|^feature\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+|^feature\\\\/[a-z]+-\\\\d+\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+)"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -202,9 +203,10 @@
             - 'apt-get update && apt-get -y install php8.2-cli php8.2-mbstring'
         shell: 'BASH'
 - pipeline: 'Docker / Functional / Acceptance'
-  on: 'PUSH'
-  refs:
-      - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\/.+|^feature\\/[a-z]+-\\d+\\/(master|dev)-.+|^feature\\/[a-z]+-\\d+\\/[a-z]+-\\d+\\/(master|dev)-.+)"
+  events:
+      - type: 'PUSH'
+        refs:
+            - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\\\/.+|^feature\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+|^feature\\\\/[a-z]+-\\\\d+\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+)"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -691,9 +693,10 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 - pipeline: 'Docker / Functional / Acceptance/ Prefer Lowest'
-  on: 'PUSH'
-  refs:
-      - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\/.+|^feature\\/[a-z]+-\\d+\\/(master|dev)-.+|^feature\\/[a-z]+-\\d+\\/[a-z]+-\\d+\\/(master|dev)-.+)"
+  events:
+      - type: 'PUSH'
+        refs:
+            - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\\\/.+|^feature\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+|^feature\\\\/[a-z]+-\\\\d+\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+)"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -822,9 +825,10 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 - pipeline: 'Robot Tests'
-  on: 'PUSH'
-  refs:
-      - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\/.+|^feature\\/[a-z]+-\\d+\\/(master|dev)-.+|^feature\\/[a-z]+-\\d+\\/[a-z]+-\\d+\\/(master|dev)-.+)"
+  events:
+      - type: 'PUSH'
+        refs:
+            - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\\\/.+|^feature\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+|^feature\\\\/[a-z]+-\\\\d+\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+)"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -909,9 +913,10 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 - pipeline: 'Validation / Prefer Lowest'
-  on: 'PUSH'
-  refs:
-      - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\/.+|^feature\\/[a-z]+-\\d+\\/(master|dev)-.+|^feature\\/[a-z]+-\\d+\\/[a-z]+-\\d+\\/(master|dev)-.+)"
+  events:
+      - type: 'PUSH'
+        refs:
+            - "refs/heads/(^master$|^(bugfix|hotfix|beta)\\\\/.+|^feature\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+|^feature\\\\/[a-z]+-\\\\d+\\\\/[a-z]+-\\\\d+\\\\/(master|dev)-.+)"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
