--- a/buddy.yml
+++ b/buddy.yml
@@ -2,7 +2,7 @@
   events:
       - type: 'PUSH'
         refs:
-            - "refs/pull/*"
+            - 'refs/pull/*'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -206,7 +206,7 @@
   events:
       - type: 'PUSH'
         refs:
-            - "refs/pull/*"
+            - 'refs/pull/*'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -696,7 +696,7 @@
   events:
       - type: 'PUSH'
         refs:
-            - "refs/pull/*"
+            - 'refs/pull/*'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -828,7 +828,7 @@
   events:
       - type: 'PUSH'
         refs:
-            - "refs/pull/*"
+            - 'refs/pull/*'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -916,7 +916,7 @@
   events:
       - type: 'PUSH'
         refs:
-            - "refs/pull/*"
+            - 'refs/pull/*'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
