--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -2,6 +2,12 @@
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
         "paths": {
+            "@mp/agent-dashboard-merchant-portal-gui": [
+                "vendor/spryker/spryker/Bundles/AgentDashboardMerchantPortalGui/mp.public-api.ts"
+            ],
+            "@mp/agent-security-merchant-portal-gui": [
+                "vendor/spryker/spryker/Bundles/AgentSecurityMerchantPortalGui/mp.public-api.ts"
+            ],
             "@mp/dashboard-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/DashboardMerchantPortalGui/mp.public-api.ts"
             ],
