--- a/composer.json
+++ b/composer.json
@@ -1227,7 +1227,7 @@
         "spryker-sdk/benchmark": "^0.2.0",
         "spryker-sdk/codeception-phantoman": "^0.1.0",
         "spryker-sdk/composer-constrainer": "^0.2.0",
-        "spryker-sdk/evaluator": "0.1.4",
+        "spryker-sdk/evaluator": "dev-master",
         "spryker-sdk/load-testing": "^0.1.0",
         "spryker-sdk/phpstan-spryker": "^0.4.0",
         "spryker-sdk/spryk": "^0.4.0",
