CC-32215: Agent merchant portal integration.

--- a/composer.json
+++ b/composer.json
@@ -1207,7 +1207,7 @@
         "symfony/http-foundation": "^5.2.0 || 6.4.2"
     },
     "require-dev": {
-        "codeception/codeception": "^5.0.2",
+        "codeception/codeception": "5.0.12",
         "codeception/module-asserts": "^3.0.0",
         "codeception/module-cli": "^2.0.0",
         "codeception/module-filesystem": "^3.0.0",
