--- a/composer.json
+++ b/composer.json
@@ -108,7 +108,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.27",
-        "codeception/codeception": "^5.0.8",
+        "codeception/codeception": "~5.0.12",
         "codeception/lib-innerbrowser": "^3.1.2",
         "spryker/architecture-sniffer": "dev-master",
         "spryker/development-core": "dev-master",
