FRW-7289 Fixed Development module dependency BC-break. (#8652)
FRW-7289 Fixed Development module dependency BC-break.

--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
         "mikey179/vfsstream": "^1.6.7",
         "moneyphp/money": "^3.0.0",
         "monolog/monolog": "^1.25.0 || ^2.0.0",
-        "nette/di": "3.1.10",
+        "nette/di": "^3.2.0",
         "phpdocumentor/graphviz": "^2.0.0",
         "predis/predis": "^1.1.1",
         "propel/propel": "2.0.0-beta3",
