FRW-6363 Updated deploy files (#8666)
FRW-6363 Fixed issue with incorrect host in deploy files.

--- a/deploy.dev.dynamic-store.yml
+++ b/deploy.dev.dynamic-store.yml
@@ -129,7 +129,7 @@ groups:
             mportal_us:
                 application: merchant-portal
                 endpoints:
-                    mp.us.multistore.frw.cloud.spryker.toys:
+                    mp.us.spryker.local:
                         region: US
                         entry-point: MerchantPortal
                         primal: true
