--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -467,7 +467,7 @@ jobs:
                   composer lowest
 
     docker-alpine-php-8-1-mariadb-robot:
-        name: "Docker / Alpine / PHP 8.1 / MariaDB / Robot"
+        name: "Docker / Alpine / PHP 8.1 / MariaDB / Robot / API"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -519,7 +519,7 @@ jobs:
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
 
     docker-alpine-php-8-2-postgresql-robot:
-        name: "Docker / Alpine / PHP 8.2 / PostgreSQL / Robot"
+        name: "Docker / Alpine / PHP 8.2 / PostgreSQL / Robot / API"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -570,3 +570,62 @@ jobs:
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
 
+    docker-alpine-php-8-2-mariadb-robot-dynamic-multistore:
+        name: "Docker / Alpine / PHP 8.2 / MariaDB / Robot /API / Dynamic Multistore"
+        runs-on: ubuntu-20.04
+        env:
+            PROGRESS_TYPE: plain
+            SPRYKER_PLATFORM_IMAGE: spryker/php:8.2
+            TRAVIS: 1
+            ROBOT_TESTS_ARTIFACTS_BUCKET_REGION: eu-west-1
+        steps:
+            -   name: apt update
+                run: sudo apt update
+
+            - uses: actions/checkout@v3
+
+            - uses: actions/setup-python@v4
+              with:
+                  python-version: '3.9'
+
+            - name: Install packages
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install apache2-utils
+                  sudo apt install awscli -q
+                  python3 -m pip install --upgrade pip
+                  python3 -m pip install -U robotframework
+                  python3 -m pip install -U robotframework-requests
+                  python3 -m pip install -U robotframework-jsonlibrary
+                  python3 -m pip install -U robotframework-databaselibrary
+                  python3 -m pip install PyMySQL
+            - name: Install docker-compose
+              run: |
+                  sudo curl -L "https://github.com/docker/compose/releases/download/2.12.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+                  sudo chmod +x /usr/local/bin/docker-compose
+            - name: Install Robot tests
+              run: |
+                  git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
+            - name: Install Project
+              continue-on-error: true
+              run: |
+                  git clone https://github.com/spryker/docker-sdk.git ./docker
+                  docker/sdk boot -v deploy.ci.acceptance.mariadb.dynamic-store.yml
+                  sudo bash -c "echo '127.0.0.1 backend-api.eu.spryker.local backend-api.us.spryker.local backend-gateway.eu.spryker.local backend-gateway.us.spryker.local backoffice.eu.spryker.local backoffice.us.spryker.local glue-backend.eu.spryker.local glue-backend.us.spryker.local glue-storefront.eu.spryker.local glue-storefront.us.spryker.local glue.eu.spryker.local glue.us.spryker.local mail.spryker.local mp.eu.spryker.local mp.us.spryker.local queue.spryker.local scheduler.spryker.local spryker.local swagger.spryker.local yves.eu.spryker.local yves.us.spryker.local' >> /etc/hosts"
+                  docker/sdk up -t -v
+            -   name: Custom commands
+                continue-on-error: false
+                run: |
+                    docker/sdk cli composer dump-autoload -o -a
+                    SPRYKER_CURRENT_REGION=EU docker/sdk console queue:worker:start --stop-when-empty
+            -   name: Run Tests
+                run: |
+                    cd robotframework-tests
+                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring -s '*'.tests.api.suite .
+                    touch results/time.txt && echo $(date) > results/time.txt
+            -   name: Upload artifacts
+                if: always()
+                run: |
+                    AWS_DEFAULT_REGION=${{env.ROBOT_TESTS_ARTIFACTS_BUCKET_REGION}} AWS_ACCESS_KEY_ID=${{ secrets.ROBOT_TESTS_ARTIFACTS_KEY }} AWS_SECRET_ACCESS_KEY=${{ secrets.ROBOT_TESTS_ARTIFACTS_SECRET }} aws s3 cp robotframework-tests/results s3://${{vars.ROBOT_TESTS_ARTIFACTS_BUCKET}}/suite-dynamic-multistore/${GITHUB_RUN_ID}/PHP8.2MariaDBRobot/ \
+                    --recursive \
+                    --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
