fixed frw deploy file

--- a/deploy.spryker-frw.yml
+++ b/deploy.spryker-frw.yml
@@ -179,14 +179,14 @@ groups:
                         store: DE
                     glue.at.frw.cloud.spryker.toys:
                         store: AT
-            glue_storefront_eu:
+            glue_storefront:
                 application: glue-storefront
                 endpoints:
                     glue-storefront.de.frw.cloud.spryker.toys:
                         store: DE
                     glue-storefront.at.frw.cloud.spryker.toys:
                         store: AT
-            glue_backend_eu:
+            glue_backend:
                 application: glue-backend
                 endpoints:
                     glue-backend.de.frw.cloud.spryker.toys:
