--- a/composer.json
+++ b/composer.json
@@ -1202,8 +1202,7 @@
         "spryker/zed-navigation-extension": "^1.0.0",
         "spryker/zed-request": "^3.17.0",
         "spryker/zed-request-extension": "^1.0.0",
-        "spryker/zed-ui": "^2.0.0",
-        "symfony/http-foundation": "^5.2.0 || 6.4.2"
+        "spryker/zed-ui": "^2.0.0"
     },
     "require-dev": {
         "codeception/codeception": "5.0.12",
