FRW-7456 Tried use jummy ubuntu

--- a/.travis.yml
+++ b/.travis.yml
@@ -428,6 +428,7 @@ jobs:
         - name: PHP Validation
           php: '8.1'
           stage: Test
+          dist: jammy
           env:
               - APPLICATION_STORE=DE
           before_install:
@@ -533,6 +534,7 @@ jobs:
         - name: PHP 8.1 / MarketPlace Testing
           php: '8.1'
           stage: Test
+          dist: jammy
           env:
               - APPLICATION_STORE=DE
           before_install:
