--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ _COMPOSER_PREFER_LOWEST: &COMPOSER_PREFER_LOWEST
 _ADDONS_APT_PACKAGES_BASE_INFRASTRUCTURE: &ADDONS_APT_PACKAGES_BASE_INFRASTRUCTURE
     - redis-tools
     - redis-server
+    - rabbitmq-server
     - graphviz
     - libzip-dev
     - awscli
