--- a/buddy.yml
+++ b/buddy.yml
@@ -1,7 +1,7 @@
 - pipeline: 'Standard Validation'
-  on: "CLICK"
+  on: 'CLICK'
   refs:
-      - ":default"
+      - ':default'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -205,9 +205,9 @@
             - 'apt-get update && apt-get -y install php8.2-cli php8.2-mbstring'
         shell: 'BASH'
 - pipeline: 'Docker / Functional / Acceptance'
-  on: "CLICK"
+  on: 'CLICK'
   refs:
-      - ":default"
+      - ':default'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -696,9 +696,9 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 - pipeline: 'Docker / Functional / Acceptance/ Prefer Lowest'
-  on: "CLICK"
+  on: 'CLICK'
   refs:
-      - ":default"
+      - ':default'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -829,9 +829,9 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 - pipeline: 'Robot Tests'
-  on: "CLICK"
+  on: 'CLICK'
   refs:
-      - ":default"
+      - ':default'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -918,9 +918,9 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 - pipeline: 'Validation / Prefer Lowest'
-  on: "CLICK"
+  on: 'CLICK'
   refs:
-      - ":default"
+      - ':default'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
