--- a/.travis.yml
+++ b/.travis.yml
@@ -543,8 +543,8 @@ jobs:
               - *BEFORE_INSTALL_SCRIPT
           install:
               - *COMPOSER_INSTALL
-              - sudo apt install openssl libssl-dev
-              - rvm reinstall ruby
+              - gem source -r https://rubygems.org/
+              - gem source -a http://rubygems.org/
               - *INSTALL_SCRIPT
           script:
               - unset CHROME_BIN && export CHROME_BIN=${CHROMIUM_BINARY}
