FRW-7456 Try fix interactive

--- a/.travis.yml
+++ b/.travis.yml
@@ -544,7 +544,7 @@ jobs:
           install:
               - *COMPOSER_INSTALL
               - gem source -r https://rubygems.org/
-              - gem source -a http://rubygems.org/
+              - yes | gem source -a http://rubygems.org/
               - *INSTALL_SCRIPT
           script:
               - unset CHROME_BIN && export CHROME_BIN=${CHROMIUM_BINARY}
